# okapi

examples/custom_schema/: Cargo.toml
examples/dyn_templates/: Cargo.toml
examples/json-web-api/: Cargo.toml
examples/openapi_attributes/: Cargo.toml
examples/raw_identifiers/: Cargo.toml
examples/secure_request_guard/: Cargo.toml
examples/special-types/: Cargo.toml
examples/streams/: Cargo.toml
examples/uuid/: Cargo.toml
rocket-okapi/: Cargo.toml
rocket-okapi-codegen/: Cargo.toml
rocket-okapi/src/handlers/: redirect.rs
