[package]
name = "custom_schema"
version = "0.1.0"
authors = ["Ralph Bisschops <ralph.bisschops.dev@gmail.com>"]
edition = "2018"

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket.git", version = "=0.5.0-rc.3", rev = "26a3f00f", default-features = false, features = ["json"] }
rocket_okapi = { path = "../../rocket-okapi", features = ["swagger", "rapidoc"] }
serde = "1.0"
serde_json = "1.0"
indexmap = "1.8.2"
