[package]
name = "json_web_api"
version = "0.1.0"
authors = ["Graham Esau <gesau@hotmail.co.uk>"]
edition = "2018"

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket.git", version = "=0.5.0-rc.3", rev = "26a3f00f", default-features = false, features = ["json"] }
rocket_okapi = { path = "../../rocket-okapi", features = ["swagger", "rapidoc"] }
serde = "1.0"
