[package]
name = "raw_identifiers"
version = "0.1.0"
authors = ["Alex Payne <apayne@esri.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket.git", version = "=0.5.0-rc.3", rev = "26a3f00f", default-features = false, features = ["json"] }
rocket_okapi = { path = "../../rocket-okapi", features = ["rapidoc", "swagger"] }
